--- a/cmake/runmarlin.cmake.in
+++ b/cmake/runmarlin.cmake.in
@@ -23,7 +23,7 @@ ENDFOREACH( input_file ${MARLIN_INPUT_FILES} )
 
 # execute marlin
 EXECUTE_PROCESS(
-  COMMAND @EXECUTABLE_OUTPUT_PATH@/Marlin @MARLIN_STEERING_FILE@ @MARLIN_ARGS@
+  COMMAND $<TARGET_FILE:bin_Marlin> @MARLIN_STEERING_FILE@ @MARLIN_ARGS@
   OUTPUT_VARIABLE RUN_OUTPUT
 )
 
