--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -5,34 +5,29 @@
 # @date: Oct 2019
 #
 
-list( APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake )
-include( MarlinUnitTesting )
-
-# include directories
-include_directories( BEFORE ./include ${PROJECT_SOURCE_DIR}/source/include  ${PROJECT_BINARY_DIR} )
-
+# add unit test library
+set( MarlinUnitTest_sources processors/TestProcessorEventSeeder.cc )
 if( MARLIN_LCIO )
   find_package( LCIO REQUIRED QUIET )
-  include_directories( SYSTEM ${LCIO_INCLUDE_DIRS} )
-  link_libraries( ${LCIO_LIBRARIES} )
+  list( APPEND MarlinUnitTest_sources processors/TestEventModifier.cc )
 endif()
-
-if( MARLIN_BOOK )
-	#find_package(MarlinBook CONFIG REQUIRED )
-	include_directories( ${PROJECT_SOURCE_DIR}/source/book/include)
-	link_libraries( MarlinBook )
-endif()
-
-# add unit test library
-
-aux_source_directory( ./processors library_sources )
-set( library_sources processors/TestProcessorEventSeeder.cc )
+add_library( UnitTest SHARED ${MarlinUnitTest_sources} )
+add_library( Marlin::UnitTest ALIAS UnitTest )
+set_target_properties( UnitTest PROPERTIES OUTPUT_NAME MarlinUnitTest )
+target_include_directories( UnitTest SYSTEM BEFORE PUBLIC $<TARGET_PROPERTY:Marlin::Core,INCLUDE_DIRECTORIES> )
+target_link_libraries( UnitTest PUBLIC Marlin::Core )
+set_target_properties( 
+  UnitTest
+  PROPERTIES 
+    COMPILE_FLAGS ${MARLIN_COMPILE_OPTIONS}
+    VERSION ${${PROJECT_NAME}_VERSION}
+    CXX_STANDARD ${MARLIN_CXX_STANDARD}
+)
 if( MARLIN_LCIO )
-  list( APPEND library_sources processors/TestEventModifier.cc )
+  target_include_directories( UnitTest SYSTEM PUBLIC ${LCIO_INCLUDE_DIRS} )
+  target_link_libraries( UnitTest PUBLIC ${LCIO_LIBRARIES} )
 endif()
-
-add_shared_library( MarlinUnitTest ${library_sources} )
-target_link_libraries( MarlinUnitTest Marlin )
+# NOTE: The unit test library is not installed
 
 # Add unit tests
 marlin_add_test (
@@ -47,25 +42,23 @@ marlin_add_test (
   REGEX_FAIL "TEST_FAILED"
 )
 
-if(MARLIN_BOOK)
-#Marlin_book tests
-	marlin_add_test (
-		test-book-store
-		BUILD_EXEC
-		REGEX_FAIL "TEST_FAILED"
-	)
+marlin_add_test (
+	test-book-store
+	BUILD_EXEC
+	REGEX_FAIL "TEST_FAILED"
+  COMPONENTS Marlin::Book
+)
 
-	marlin_add_test (
-		test-mem-layout
-		BUILD_EXEC
-		REGEX_FAIL "TEST_FAILED"
-	)
-	
-endif()
+marlin_add_test (
+	test-mem-layout
+	BUILD_EXEC
+	REGEX_FAIL "TEST_FAILED"
+  COMPONENTS Marlin::Book
+)
 
 marlin_add_test (
   marlinminusx
-  COMMAND ${EXECUTABLE_OUTPUT_PATH}/Marlin
+  COMMAND $<TARGET_FILE:bin_Marlin>
   EXEC_ARGS -x test_marlinminusx.xml
   REGEX_PASS NONE
 )
@@ -78,32 +71,30 @@ marlin_add_test (
   DEPENDS marlinminusx
 )
 
-if( MARLIN_LCIO )
-  marlin_add_processor_test (
-    eventmodifier
-    STEERING_FILE ${CMAKE_CURRENT_SOURCE_DIR}/steer/eventmodifier.xml
-    INPUT_FILES ${CMAKE_CURRENT_SOURCE_DIR}/data/simjob.slcio
-    REGEX_PASS "TestEventModifier modified 3 events in 1 run"
-    MARLIN_DLL "$<TARGET_FILE:MarlinLCIO>"
-  )
+marlin_add_processor_test (
+  eventmodifier
+  STEERING_FILE ${CMAKE_CURRENT_SOURCE_DIR}/steer/eventmodifier.xml
+  INPUT_FILES ${CMAKE_CURRENT_SOURCE_DIR}/data/simjob.slcio
+  REGEX_PASS "TestEventModifier modified 3 events in 1 run"
+  MARLIN_DLL Marlin::LCIOPlugins
+)
 
-  marlin_add_processor_test (
-    processoreventseeder
-    STEERING_FILE ${CMAKE_CURRENT_SOURCE_DIR}/steer/processoreventseeder.xml
-    INPUT_FILES ${CMAKE_CURRENT_SOURCE_DIR}/data/simjob.slcio
-    REGEX_PASS "TestProcessorEventSeeder failed to register processor to event seed generator"
-    REGEX_FAIL "ERROR .TestProcessorEventSeeder.* Seeds don't match"
-    MARLIN_DLL "$<TARGET_FILE:MarlinLCIO>"
-  )
+marlin_add_processor_test (
+  processoreventseeder
+  STEERING_FILE ${CMAKE_CURRENT_SOURCE_DIR}/steer/processoreventseeder.xml
+  INPUT_FILES ${CMAKE_CURRENT_SOURCE_DIR}/data/simjob.slcio
+  REGEX_PASS "TestProcessorEventSeeder failed to register processor to event seed generator"
+  REGEX_FAIL "ERROR .TestProcessorEventSeeder.* Seeds don't match"
+  MARLIN_DLL Marlin::LCIOPlugins
+)
 
-  marlin_add_processor_test (
-    includeandconstants
-    STEERING_FILE ${CMAKE_CURRENT_SOURCE_DIR}/steer/base-eventmodifier.xml
-    INPUT_FILES
-      ${CMAKE_CURRENT_SOURCE_DIR}/data/simjob.slcio
-      ${CMAKE_CURRENT_SOURCE_DIR}/steer/include-eventmodifier.xml
-      ${CMAKE_CURRENT_SOURCE_DIR}/steer/constants-eventmodifier.xml
-    REGEX_PASS "TestEventModifier modified 3 events in 1 run"
-    MARLIN_DLL "$<TARGET_FILE:MarlinLCIO>"
-  )
-endif()
+marlin_add_processor_test (
+  includeandconstants
+  STEERING_FILE ${CMAKE_CURRENT_SOURCE_DIR}/steer/base-eventmodifier.xml
+  INPUT_FILES
+    ${CMAKE_CURRENT_SOURCE_DIR}/data/simjob.slcio
+    ${CMAKE_CURRENT_SOURCE_DIR}/steer/include-eventmodifier.xml
+    ${CMAKE_CURRENT_SOURCE_DIR}/steer/constants-eventmodifier.xml
+  REGEX_PASS "TestEventModifier modified 3 events in 1 run"
+  MARLIN_DLL Marlin::LCIOPlugins
+)
