--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,16 @@ services:
 
 language: cpp
 
+before_install:
+  - sudo apt-get -y install python-pip
+
+install:
+  - pip install mkdocs mkdocs-material pymdown-extensions pygments
+  - git clone https://github.com/pieterdavid/mkdocs-doxygen-plugin.git
+  - cd mkdocs-doxygen-plugin
+  - python setup.py install --user
+  - cd ..
+
 # command to run tests
 script:
   - shopt -s extglob dotglob
@@ -15,6 +25,18 @@ script:
   - export PKGDIR=${PWD}/Package
   - docker run -it --name CI_container -v $PKGDIR:/Package -d rete/marlinmt-ci
   - docker exec -it CI_container /bin/bash -c "/Package/.travis-ci.d/compile_and_test.sh"
+
+before_deploy:
+  - cd Package
+  - mkdocs build --verbose --clean --strict # Build a local version of the docs
+
+deploy: # Deploy documentation to Github in the gh_pages branch
+  provider: pages
+  skip_cleanup: true
+  github_token: $GITHUB_TOKEN
+  local_dir: site
+  on:
+    branch: master
 
 # Don't send e-mail notifications
 notifications:
