--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ script:
 
 before_deploy:
   - cd Package
-  - mkdocs build --verbose --clean --strict # Build a local version of the docs
+  - mkdocs build --verbose --clean # Build a local version of the docs
 
 deploy: # Deploy documentation to Github in the gh_pages branch
   provider: pages
