--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ script:
 # deploy mkdocs documentation
 after_success:
   - if [[ "${TRAVIS_EVENT_TYPE}" != "cron" && "${TRAVIS_EVENT_TYPE}" != "pull_request" && "${TRAVIS_REPO_SLUG%/*}" == "iLCSoft" && -z ${TRAVIS_TAG} ]];
-    then cd Package; git remote rm origin; git remote add origin https://rete:$GITHUB_TOKEN@github.com/$TRAVIS_REPO_SLUG.git; docker exec -it CI_container -w /Package /bin/bash -c "mkdocs gh-deploy";
+    then cd Package; git remote rm origin; git remote add origin https://rete:$GITHUB_TOKEN@github.com/$TRAVIS_REPO_SLUG.git; docker exec -w /Package -it CI_container /bin/bash -c "mkdocs gh-deploy";
     fi
 
 # Don't send e-mail notifications
