Updated main travis CI script to run deploy_documentation.sh

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,13 +13,13 @@ script:
   - mv !(Package) Package
   - shopt -u dotglob
   - export PKGDIR=${PWD}/Package
-  - docker run -it --name CI_container -v $PKGDIR:/Package -d rete/marlinmt-ci
+  - docker run -it --name CI_container -v $PKGDIR:/Package -e GITHUB_TOKEN=$GITHUB_TOKEN -d rete/marlinmt-ci
   - docker exec -it CI_container /bin/bash -c "/Package/.travis-ci.d/compile_and_test.sh"
 
 # deploy mkdocs documentation
 after_success:
   - if [[ "${TRAVIS_EVENT_TYPE}" != "cron" && "${TRAVIS_EVENT_TYPE}" != "pull_request" && "${TRAVIS_REPO_SLUG%/*}" == "iLCSoft" && -z ${TRAVIS_TAG} ]];
-    then cd Package; git remote rm origin; git remote add origin https://rete:$GITHUB_TOKEN@github.com/$TRAVIS_REPO_SLUG.git; docker exec -it CI_container /bin/bash -c "cd /Package; mkdocs gh-deploy --force";
+    then docker exec -it CI_container /bin/bash -c "/Package/.travis-ci.d/deploy_documentation.sh";
     fi
 
 # Don't send e-mail notifications
