Fixed missing -c argument

--- a/cmake/runmarlin.cmake.in
+++ b/cmake/runmarlin.cmake.in
@@ -24,7 +24,7 @@ ENDFOREACH( input_file ${MARLIN_INPUT_FILES} )
 
 # execute marlin
 EXECUTE_PROCESS(
-	COMMAND $<TARGET_FILE:@MARLIN_BIN_TARGET@> @MARLIN_STEERING_FILE@ @MARLIN_ARGS@
+	COMMAND $<TARGET_FILE:@MARLIN_BIN_TARGET@> -c @MARLIN_STEERING_FILE@ @MARLIN_ARGS@
   OUTPUT_VARIABLE RUN_OUTPUT
 )
 
